--- a/InternalPortal/InternalPortal.csproj
+++ b/InternalPortal/InternalPortal.csproj
@@ -10,6 +10,8 @@
       <NoWarn>1701,1702,8032</NoWarn>
     </PropertyGroup>
     <ItemGroup>
+      <PackageReference Include="Gov.UK.BankHolidayProvider" Version="1.0.2" />
+      <PackageReference Include="GovUk.Frontend.AspNetCore" Version="0.5.1" />
       <PackageReference Include="LigerShark.WebOptimizer.Core" Version="3.0.319" />
       <PackageReference Include="LigerShark.WebOptimizer.Sass" Version="3.0.58-beta" />
       <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
@@ -17,8 +19,11 @@
       <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0-rc.1.21451.13" />
       <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="6.0.0-rc.1.21452.15" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+      <PackageReference Include="Ofgem-govuk-design-system-dotnet" Version="1.0.0-20210615.7" />
+      <PackageReference Include="Ofgem.API.GGSS.Application" Version="1.3.139" />
       <PackageReference Include="Polly" Version="7.2.2" />
       <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
+      <PackageReference Include="Ofgem.API.GGSS.Domain" Version="1.3.142" />
       <PackageReference Include="System.Linq" Version="4.3.0" />
       <PackageReference Include="runtime.fedora.24-x64.runtime.native.System.Security.Cryptography.OpenSsl" Version="4.3.3" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
@@ -50,22 +55,5 @@
     <ItemGroup>
       <Folder Include="Views\ApplicationDetails\" />
       <Folder Include="wwwroot\lib\govuk-frontend\js" />
-    </ItemGroup>
-    <ItemGroup>
-      <Reference Include="Gov.UK.BankHolidayProvider">
-        <HintPath>..\Dependencies\Gov.UK.BankHolidayProvider.dll</HintPath>
-      </Reference>
-      <Reference Include="GovUk.Frontend.AspNetCore">
-        <HintPath>..\Dependencies\GovUk.Frontend.AspNetCore.dll</HintPath>
-      </Reference>
-      <Reference Include="GovUkDesignSystem">
-        <HintPath>..\Dependencies\GovUkDesignSystem.dll</HintPath>
-      </Reference>
-      <Reference Include="Ofgem.API.GGSS.Application">
-        <HintPath>..\Dependencies\Ofgem.API.GGSS.Application.dll</HintPath>
-      </Reference>
-      <Reference Include="Ofgem.API.GGSS.Domain">
-        <HintPath>..\Dependencies\Ofgem.API.GGSS.Domain.dll</HintPath>
-      </Reference>
     </ItemGroup>
 </Project>
